<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">pda6100_scan_ver0.0</string>
    <drawable name="clr_normal">#666666</drawable>
    <drawable name="clr_pressed">#333333</drawable>
    <drawable name="list_normal">#00000000</drawable>
    <drawable name="list_pressed">#FF333333</drawable>
    <string name="menu_settings">设置</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="soft_version">软件版本:</string>
    <string name="version">版本:</string>
    <string name="dmin">最小频点:</string>
    <string name="band">频段:</string>
    <string name="dmax">最大频点:</string>
    <string name="power">功率:</string>
    <string name="scantime">询查最大时间:</string>
    <string name="opening">"正在开启设备"</string>
    <string name="item_name">名称</string>
        <string name="btn_goto">读写标签</string>
        <string name="btn_broad">广播方式读写(不需要EPC)</string>

        <string-array name="men_select">
            <item>保留区</item>
            <item>EPC区</item>
            <item>TID区</item>
            <item>用户区</item>
        </string-array>
        <string-array name="men_s">
            <item>单标签</item>
            <item>多标签</item>
            <item>自动</item>
        </string-array>
        <string-array name="men_time">
            <item>0</item>
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
            <item>6</item>
            <item>7</item>
            <item>8</item>
            <item>9</item>
            <item>10</item>
            <item>11</item>
            <item>12</item>
            <item>13</item>
            <item>14</item>
            <item>15</item>
            <item>16</item>
            <item>17</item>
            <item>18</item>
            <item>19</item>
            <item>20</item>
            <item>21</item>
            <item>22</item>
            <item>23</item>
            <item>24</item>
            <item>25</item>
            <item>26</item>
            <item>27</item>
            <item>28</item>
            <item>29</item>
            <item>30</item>
            <item>31</item>
            <item>32</item>
            <item>33</item>
            <item>34</item>
            <item>35</item>
            <item>36</item>
            <item>37</item>
            <item>38</item>
            <item>39</item>
            <item>40</item>
            <item>41</item>
            <item>42</item>
            <item>43</item>
            <item>44</item>
            <item>45</item>
            <item>46</item>
            <item>47</item>
            <item>48</item>
            <item>49</item>
            <item>50</item>
            <item>51</item>
            <item>52</item>
            <item>53</item>
            <item>54</item>
            <item>55</item>
            <item>56</item>
            <item>57</item>
            <item>58</item>
            <item>59</item>
            <item>60</item>
            <item>61</item>
            <item>62</item>
            <item>63</item>
            <item>64</item>
            <item>65</item>
            <item>66</item>
            <item>67</item>
            <item>68</item>
            <item>69</item>
            <item>70</item>
            <item>71</item>
            <item>72</item>
            <item>73</item>
            <item>74</item>
            <item>75</item>
            <item>76</item>
            <item>77</item>
            <item>78</item>
            <item>79</item>
            <item>80</item>
            <item>81</item>
            <item>82</item>
            <item>83</item>
            <item>84</item>
            <item>85</item>
            <item>86</item>
            <item>87</item>
            <item>88</item>
            <item>89</item>
            <item>90</item>
            <item>91</item>
            <item>92</item>
            <item>93</item>
            <item>94</item>
            <item>95</item>
            <item>96</item>
            <item>97</item>
            <item>98</item>
            <item>99</item>
            <item>100</item>
        </string-array>
        <string name="open_warning">请先打开设备！</string>
        <string name="wordptr_empty_warning">内容不能为空!</string>
        <string name="length_empty_warning">长度不能为空!</string>
        <string name="pwd_empty_warning">密码不能为空!</string>
        <string name="pwd_len_warning">密码长度必须为4字节!</string>
        <string name="content_empty_warning">数据不能为空!</string>
        <string name="length_content_warning">内容长度与长度不符!</string>
        <string name="str_lenght_odd_warning">数据长度不能为奇数!</string>
        <string name="data_ilegal">数据不合规!(为空或者长度为奇数?)</string>
        <string-array name="Fre_select">
            <item>902.75 MHz</item>
            <item>903.25 MHz</item>
            <item>903.75 MHz</item>
            <item>904.25 MHz</item>
            <item>904.75 MHz</item>
            <item>905.25 MHz</item>
            <item>905.75 MHz</item>
            <item>906.25 MHz</item>
            <item>906.75 MHz</item>
            <item>907.25 MHz</item>
            <item>907.75 MHz</item>
            <item>908.25 MHz</item>
            <item>908.75 MHz</item>
            <item>909.25 MHz</item>
            <item>909.75 MHz</item>
            <item>910.25 MHz</item>
            <item>910.75 MHz</item>
            <item>911.25 MHz</item>
            <item>911.75 MHz</item>
            <item>912.25 MHz</item>
            <item>912.75 MHz</item>
            <item>913.25 MHz</item>
            <item>913.75 MHz</item>
            <item>914.25 MHz</item>
            <item>914.75 MHz</item>
            <item>915.25 MHz</item>
            <item>915.75 MHz</item>
            <item>916.25 MHz</item>
            <item>916.75 MHz</item>
            <item>917.25 MHz</item>
            <item>917.75 MHz</item>
            <item>918.25 MHz</item>
            <item>918.75 MHz</item>
            <item>919.25 MHz</item>
            <item>919.75 MHz</item>
            <item>920.25 MHz</item>
            <item>920.75 MHz</item>
            <item>921.25 MHz</item>
            <item>921.75 MHz</item>
            <item>922.25 MHz</item>
            <item>922.75 MHz</item>
            <item>923.25 MHz</item>
            <item>923.75 MHz</item>
            <item>924.25 MHz</item>
            <item>924.75 MHz</item>
            <item>925.25 MHz</item>
            <item>925.75 MHz</item>
            <item>926.25 MHz</item>
            <item>926.75 MHz</item>
            <item>927.25 MHz</item>
        </string-array>
        <string-array name="Power_select">
            <item>0</item>
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
            <item>6</item>
            <item>7</item>
            <item>8</item>
            <item>9</item>
            <item>10</item>
            <item>11</item>
            <item>12</item>
            <item>13</item>
            <item>14</item>
            <item>15</item>
            <item>16</item>
            <item>17</item>
            <item>18</item>
            <item>19</item>
            <item>20</item>
            <item>21</item>
            <item>22</item>
            <item>23</item>
            <item>24</item>
            <item>25</item>
            <item>26</item>
            <item>27</item>
            <item>28</item>
            <item>29</item>
            <item>30</item>
            <item>31</item>
            <item>32</item>
            <item>33</item>
        </string-array>
        <string-array name="beep_select">
            <item>关</item>
            <item>开</item>
        </string-array>
        <string name="title_activity_connect232">Connect232</string>
        <string name="buad_rate">波特率：</string>
        <string name="serialport">串口：</string>
        <string name="open">打开</string>
        <string name="close">关闭</string>
        <string name="hex_recv">十六进制接收</string>
        <string name="hex_send">十六进制发送</string>
        <string name="send">发送</string>
        <string name="clear">清除</string>
        <string name="select_power">选择功率</string>

        <string name="sure">确定</string>
        <string name="count">次数</string>
        <string name="number">数量：</string>
        <string name="scan">扫描</string>
        <string name="stop">停止</string>
        <string name="tid_query">TID巡查</string>

        <string name="storage">存储区:</string>
        <string name="goods_name">存货全名</string>
        <string name="goods_code">存货编号</string>
        <string name="ware_house_name">仓库全名</string>
        <string name="specification">规格</string>
        <string name="type">型号</string>
        <string name="unit">单位</string>
        <string name="aux_unit">辅助单位</string>
        <string name="aux_unit1">辅助单位1</string>
        <string name="quan">数量</string>
        <string name="aux_quan">辅助数量</string>
        <string name="aux_quan1">辅助数量1</string>
        <string name="lot">批号</string>
        <string name="price">单价</string>
        <string name="whole_price">全额</string>
        <string name="tax_rate">税率</string>
        <string name="tax_in_price">含税单价</string>
        <string name="tax">税务</string>
        <string name="read_write_data">读写数据(Hex):</string>
        <string name="write">写数据</string>
        <string name="read">读数据</string>
        <string name="write_epc">写EPC</string>
        <string name="write_sell">写入销售单</string>
        <string name="write_buy">写入采购单</string>
        <string name="set">设置</string>
        <string name="get">获取</string>
        <string name="buzzer">蜂鸣器</string>

        <string name="port_connect_success">串口连接成功</string>
        <string name="port_connect_fail">串口连接失败</string>
        <string name="read_success">读数据成功</string>
        <string name="read_fail">读数据失败</string>
        <string name="write_epc_success">写EPC成功</string>
        <string name="write_epc_fail">写EPC失败</string>
        <string name="write_success">写数据成功</string>
        <string name="write_fail">写数据失败</string>
        <string name="set_success">设置成功</string>
        <string name="set_fail">设置失败</string>
        <string name="show_all">读取并显示所有字段</string>
</resources>