<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow android:layout_marginTop="5dp" >
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/soft_version" />

            <TextView
                android:id="@+id/soft_version"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </TableRow>

        <TableRow android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/version" />

            <TextView
                android:id="@+id/version"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/band" />

            <Spinner
                android:id="@+id/band_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dmin" />

            <Spinner
                android:id="@+id/min_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dmax" />

            <Spinner
                android:id="@+id/max_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/power" />

            <Spinner
                android:id="@+id/power_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/buzzer" />

            <Spinner
                android:id="@+id/beep_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/pro_read"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/color_button_selector"
                android:text="@string/get" />

            <Button
                android:id="@+id/pro_setting"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/color_button_selector"
                android:text="@string/sure" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/pro_set"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/color_button_selector"
        android:text="@string/set"
        android:visibility="gone" />

</LinearLayout>