<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/tag_real_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/TextView_kb"
        android:background="#EEEEEE"
        android:orientation="vertical"
        android:paddingTop="5sp" >

        <HorizontalScrollView
            android:id="@+id/tags_real_list_scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5.0dp"
            android:scrollbars="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/tag_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_background" >

                    <View
                        android:layout_width="10.0sp"
                        android:layout_height="30dp"
                        android:background="#0bbbf7" />

                    <TextView
                        android:id="@+id/id_text"
                        android:layout_width="85sp"
                        android:layout_height="30dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="2sp"
                        android:singleLine="true"
                        android:text="ID"
                        android:textColor="#ff444444"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="#BBBBBB" />

                    <TextView
                        android:id="@+id/epc_text"
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:padding="2sp"
                        android:singleLine="true"
                        android:text= "@string/item_name"
                        android:textColor="#ff333333"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="#BBBBBB" />


                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="#BBBBBB" />



                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:background="#BBBBBB" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#ff555555" />

                <ListView
                    android:id="@+id/tag_real_list_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dividerHeight="0.0dip"
                    android:fadingEdge="none"
                    android:scrollbars="vertical"
                    android:scrollingCache="false"
                    android:transcriptMode="alwaysScroll" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/scanlayout1" >

        <Spinner
            android:id="@+id/mem_s"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:gravity="left" />

        <Button
            android:id="@+id/button_goto_rw"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/color_button_selector"
            android:gravity="center"
            android:text="@string/btn_goto" />
    </RelativeLayout>

    <TextView
        android:id="@+id/TextView_kb"
        android:layout_width="500dp"
        android:layout_height="2dp"
        android:layout_above="@+id/relayout1"
        android:layout_centerHorizontal="true"
        android:background="@color/divide"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/scanlayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tx_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/num"
            android:layout_toRightOf="@+id/num"
            android:text="0"
            android:textColor="#cc0000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_scan"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@id/tx_num"
            android:background="@drawable/color_button_selector"
            android:gravity="center"
            android:text="@string/scan" />

        <!-- 如有需要请打开 -->

        <CheckBox
            android:id="@+id/checktid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/button_scan"
            android:layout_toRightOf="@+id/button_scan"
            android:gravity="center"
            android:text="TID询查"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/query_spinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/rm_6c_et_height"
            android:layout_toEndOf="@+id/button_scan"
            android:layout_toRightOf="@+id/button_scan"
            android:entries="@array/commandArray"
            android:gravity="start" />
    </RelativeLayout>

</RelativeLayout>